welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:26: error: not found: value YELLOW
  faireV(YELLOW)
         ^MethodsPicture:27: error: not found: value RED
  faireV(RED)
         ^MethodsPicture:28: error: not found: value BLUE
  faireV(BLUE)
         ^MethodsPicture:29: error: not found: value GREEN
  faireV(GREEN)
         ^