welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() { dessin()
}

def point(c:Color) = {
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
}

def faireV(c:Color) ={
  avance()
  point(c)
  avance()
  gauche()
  avance()
  point(c)
  recule()
  droite()
  avance()
  point(c)
  avance()
  gauche()
}

def faireM() = {
  faireV(YELLOW)
  faireV(RED)
  faireV(BLUE)
  faireV(GREEN)
  for (i <- 1 to 5) {avance()}
}

def faireL() = {
  for (i <- 1 to 3) {
    faireM()
  }
  gauche()
  for (i <- 1 to 5) {avance()}
  gauche()
}

def dessin() = {
  for (i <- 1 to 3) {
    faireL()
  }
}